--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "fabric": "^3.4.0",
+    "fabric-browseronly": "^3.2.0",
     "vue": "^2.6.10",
     "vuex": "^3.1.1"
   }
